--- a/slides/document.tex
+++ b/slides/document.tex
@@ -598,7 +598,7 @@ Anfang des Leiters imaginär!
 
 
 \begin{frame}{Beliebige Kapazitäten und Induktivitäten}
-Es folgt für
+Für eine kurzgeschlossene Leitung ($r_{0} = -1$) folgt
 \begin{itemize}
     \item $0 < \Delta z < \frac{\lambda}{4} \Rightarrow \mathrm{Im}(Z) > 0$: die Leitung verhält
     sich wie eine Induktivität
