--- a/slides/document.tex
+++ b/slides/document.tex
@@ -528,7 +528,7 @@ Gilt am Leiterende $Z_{e} = 0$, so folgt $r = -1$ und somit
 \begin{frame}{Offene Leitung}
 Eine offene Leitung ist durch $Z_{e} \gg 1$ gekennzeichnet. Es folgt $r = 1$ und somit
 \[
-\underline{I}_{r}(l) = - \underline{I}_{h}(l).
+\underline{U}_{r}(l) = \underline{U}_{h}(l).
 \]
 
 \begin{itemize}
@@ -606,7 +606,7 @@ Für eine kurzgeschlossene Leitung ($r_{0} = -1$) folgt
     Leitung verhält sich wie eine Kapazität
 \end{itemize}
 
-Ein solcher Leiter speichert nahezu verlustfrei dies gesamte elektrische Energie
+Ein entsprechend kurzer Leiter speichert nahezu verlustfrei die gesamte elektrische Energie
 im elektrischen Feld (Kapazität) bzw. im magnetischen Feld (Induktivität).
 
 \end{frame}
