add slide number

--- a/slides/document.tex
+++ b/slides/document.tex
@@ -19,6 +19,9 @@
 
 \setbeamercovered{transparent}
 
+%display slide number on each slide
+\setbeamertemplate{footline}{\hfill\insertframenumber/\inserttotalframenumber\hfill}
+
 
 \usepackage[ngerman]{babel}
 \babelprovide[hyphenrules=ngerman-x-latest]{ngerman}
