--- a/slides/document.tex
+++ b/slides/document.tex
@@ -404,7 +404,7 @@ Sei
 Es folgt für die Integrationskonstanten $\underline{U}_{h_{0}}$ und $\underline{U}_{r_{0}}$
 \[ \underline{U}_{h_{0}} = \frac{\underline{U}_{a} + Z_{w} \underline{I}_{a}}{2}
 \quad \text{und} \quad
-\underline{U}_{h_{0}} = \frac{\underline{U}_{a} - Z_{w} \underline{I}_{a}}{2}. \]
+\underline{U}_{r_{0}} = \frac{\underline{U}_{a} - Z_{w} \underline{I}_{a}}{2}. \]
 \end{frame}
 
 
